// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pos logic sync Case 1: Create order + addProduct in master 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "course": 1,
    "groupPrinter": "Bar",
    "id": 1,
    "name": "Cola",
    "price": 98,
    "product": "ObjectID",
    "quantity": 1,
    "tax": 19,
    "taxes": Array [
      19,
      null,
    ],
    "vSum": 98,
    "vTakeAway": false,
    "vTaxSum": Object {
      "19": Object {
        "gross": 98,
        "net": 82.35,
        "tax": 15.65,
      },
    },
  },
  Object {
    "_id": "ObjectID",
    "course": 1,
    "groupPrinter": "Bar",
    "id": "4",
    "name": "Soda",
    "price": 20,
    "product": "ObjectID",
    "quantity": 2,
    "tax": 19,
    "taxes": Array [
      19,
      7,
    ],
    "vSum": 40,
    "vTakeAway": false,
    "vTaxSum": Object {
      "19": Object {
        "gross": 40,
        "net": 33.61,
        "tax": 6.39,
      },
    },
  },
  null,
]
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 2`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "items._id": "ObjectID",
          },
          Object {
            "$set": Object {
              "items.$.product": "ObjectID",
              "items.$.vSum": 268,
              "items.$.vTaxSum": Object {
                "7": Object {
                  "gross": 268,
                  "net": 250.47,
                  "tax": 17.53,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": 2,
                "name": "Pepsi",
                "price": 35,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 0,
                "taxes": Array [
                  0,
                  null,
                ],
                "vSum": 35,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "0": Object {
                    "gross": 35,
                    "net": 35,
                    "tax": 0,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "vSum": 303,
              "vTaxSum": Object {
                "0": Object {
                  "gross": 35,
                  "net": 35,
                  "tax": 0,
                },
                "7": Object {
                  "gross": 268,
                  "net": 250.47,
                  "tax": 17.53,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": "3",
                "name": "Water",
                "originalQuantity": 2,
                "price": 67,
                "printed": true,
                "product": "ObjectID",
                "quantity": 4,
                "sent": true,
                "tax": 7,
                "taxes": Array [
                  7,
                  null,
                ],
                "vSum": 268,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "7": Object {
                    "gross": 268,
                    "net": 250.47,
                    "tax": 17.53,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": 2,
                "name": "Pepsi",
                "price": 35,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 0,
                "taxes": Array [
                  0,
                  null,
                ],
                "vSum": 35,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "0": Object {
                    "gross": 35,
                    "net": 35,
                    "tax": 0,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "_id": "ObjectID",
              "cashback": 0,
              "payment": Array [],
              "status": "inProgress",
              "takeAway": false,
              "tip": 0,
              "user": Array [],
              "vDate": "2020-12-31T17:00:00.000Z",
              "vSum": 303,
              "vTaxSum": Object {
                "0": Object {
                  "gross": 35,
                  "net": 35,
                  "tax": 0,
                },
                "7": Object {
                  "gross": 268,
                  "net": 250.47,
                  "tax": 17.53,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "3",
        "name": "Water",
        "originalQuantity": 2,
        "price": 67,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 7,
        "taxes": Array [
          7,
          null,
        ],
        "vSum": 134,
        "vTakeAway": false,
        "vTaxSum": Object {
          "7": Object {
            "gross": 134,
            "net": 125.23,
            "tax": 8.77,
          },
        },
      },
    ],
    "cashback": 0,
    "discounts": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "3",
        "name": "Water",
        "originalQuantity": 2,
        "price": 67,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 7,
        "taxes": Array [
          7,
          null,
        ],
        "vSum": 67,
        "vTakeAway": false,
        "vTaxSum": Object {
          "7": Object {
            "gross": 67,
            "net": 62.62,
            "tax": 4.38,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": 1,
        "name": "Cola",
        "price": 98,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 19,
        "taxes": Array [
          19,
          null,
        ],
        "vSum": 98,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 98,
            "net": 82.35,
            "tax": 15.65,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "4",
        "name": "Soda",
        "price": 20,
        "printed": true,
        "product": "ObjectID",
        "quantity": 2,
        "sent": true,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 40,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 40,
            "net": 33.61,
            "tax": 6.39,
          },
        },
      },
    ],
    "payment": Array [],
    "printer": Array [],
    "status": "inProgress",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 205,
    "vTaxGroups": Array [],
    "vTaxSum": Object {
      "19": Object {
        "gross": 138,
        "net": 115.96,
        "tax": 22.04,
      },
      "7": Object {
        "gross": 67,
        "net": 62.62,
        "tax": 4.38,
      },
    },
  },
]
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items\\":[{\\"groupPrinter\\":\\"Bar\\",\\"id\\":\\"3\\",\\"name\\":\\"Water\\",\\"price\\":67,\\"product\\":\\"ObjectID\\",\\"taxes\\":[7,null],\\"course\\":1,\\"quantity\\":2,\\"_id\\":\\"ObjectID\\",\\"vSum\\":134,\\"vTakeAway\\":false,\\"tax\\":7,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134}},\\"sent\\":true,\\"printed\\":true,\\"originalQuantity\\":2}],\\"cancellationItems\\":[],\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"payment\\":[],\\"user\\":[],\\"vSum\\":134,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134}},\\"tip\\":0,\\"cashback\\":0,\\"vTaxGroups\\":[],\\"printer\\":[],\\"discounts\\":[]}]}]",
    "collectionName": "Order",
    "condition": "null",
    "data": Object {
      "docId": "ObjectID",
    },
    "fromMaster": true,
    "id": 1,
    "tags": Array [],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 2,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Bar\\",\\"id\\":1,\\"name\\":\\"Cola\\",\\"price\\":98,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,null],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":98,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":15.65,\\"net\\":82.35,\\"gross\\":98}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 3,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":232,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134},\\"19\\":{\\"tax\\":15.65,\\"net\\":82.35,\\"gross\\":98}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 4,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 5,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 6,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Bar\\",\\"id\\":\\"4\\",\\"name\\":\\"Soda\\",\\"price\\":20,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":2,\\"_id\\":\\"ObjectID\\",\\"vSum\\":40,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.39,\\"net\\":33.61,\\"gross\\":40}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 7,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":272,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134},\\"19\\":{\\"tax\\":22.04,\\"net\\":115.96,\\"gross\\":138}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 8,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\",\\"items.$.quantity\\":1,\\"items.$.vSum\\":67,\\"items.$.vTaxSum\\":{\\"7\\":{\\"tax\\":4.38,\\"net\\":62.62,\\"gross\\":67}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 9,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 10,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 11,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"cancellationItems\\":{\\"groupPrinter\\":\\"Bar\\",\\"id\\":\\"3\\",\\"name\\":\\"Water\\",\\"price\\":67,\\"product\\":\\"ObjectID\\",\\"taxes\\":[7,null],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":134,\\"vTakeAway\\":false,\\"tax\\":7,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134}},\\"sent\\":true,\\"printed\\":true,\\"originalQuantity\\":2}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 12,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":205,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":4.38,\\"net\\":62.62,\\"gross\\":67},\\"19\\":{\\"tax\\":22.04,\\"net\\":115.96,\\"gross\\":138}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "fromMaster": true,
    "id": 13,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$[].sent\\":true,\\"items.$[].printed\\":true,\\"cancellationItems.$[].sent\\":true,\\"cancellationItems.$[].printed\\":true}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
    },
    "fromMaster": true,
    "id": 14,
    "tags": Array [],
    "uuid": "uuid-v1",
  },
]
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 5`] = `
Array [
  Object {
    "_id": "ObjectID",
    "cancellationItems": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "3",
        "name": "Water",
        "originalQuantity": 2,
        "price": 67,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 7,
        "taxes": Array [
          7,
          null,
        ],
        "vSum": 134,
        "vTakeAway": false,
        "vTaxSum": Object {
          "7": Object {
            "gross": 134,
            "net": 125.23,
            "tax": 8.77,
          },
        },
      },
    ],
    "cashback": 0,
    "discounts": Array [],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "3",
        "name": "Water",
        "originalQuantity": 2,
        "price": 67,
        "printed": true,
        "product": "ObjectID",
        "quantity": 1,
        "sent": true,
        "tax": 7,
        "taxes": Array [
          7,
          null,
        ],
        "vSum": 67,
        "vTakeAway": false,
        "vTaxSum": Object {
          "7": Object {
            "gross": 67,
            "net": 62.62,
            "tax": 4.38,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": 1,
        "name": "Cola",
        "price": 98,
        "product": "ObjectID",
        "quantity": 1,
        "tax": 19,
        "taxes": Array [
          19,
          null,
        ],
        "vSum": 98,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 98,
            "net": 82.35,
            "tax": 15.65,
          },
        },
      },
      Object {
        "_id": "ObjectID",
        "course": 1,
        "groupPrinter": "Bar",
        "id": "4",
        "name": "Soda",
        "price": 20,
        "product": "ObjectID",
        "quantity": 2,
        "tax": 19,
        "taxes": Array [
          19,
          7,
        ],
        "vSum": 40,
        "vTakeAway": false,
        "vTaxSum": Object {
          "19": Object {
            "gross": 40,
            "net": 33.61,
            "tax": 6.39,
          },
        },
      },
    ],
    "payment": Array [],
    "printer": Array [],
    "status": "inProgress",
    "takeAway": false,
    "tip": 0,
    "user": Array [],
    "vDate": "2020-12-31T17:00:00.000Z",
    "vSum": 205,
    "vTaxGroups": Array [],
    "vTaxSum": Object {
      "19": Object {
        "gross": 138,
        "net": 115.96,
        "tax": 22.04,
      },
      "7": Object {
        "gross": 67,
        "net": 62.62,
        "tax": 4.38,
      },
    },
  },
]
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 6`] = `
Array [
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items\\":[{\\"groupPrinter\\":\\"Bar\\",\\"id\\":\\"3\\",\\"name\\":\\"Water\\",\\"price\\":67,\\"product\\":\\"ObjectID\\",\\"taxes\\":[7,null],\\"course\\":1,\\"quantity\\":2,\\"_id\\":\\"ObjectID\\",\\"vSum\\":134,\\"vTakeAway\\":false,\\"tax\\":7,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134}},\\"sent\\":true,\\"printed\\":true,\\"originalQuantity\\":2}],\\"cancellationItems\\":[],\\"takeAway\\":false,\\"status\\":\\"inProgress\\",\\"payment\\":[],\\"user\\":[],\\"vSum\\":134,\\"vDate\\":\\"2020-12-31T17:00:00.000Z\\",\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134}},\\"tip\\":0,\\"cashback\\":0,\\"vTaxGroups\\":[],\\"printer\\":[],\\"discounts\\":[]}]}]",
    "collectionName": "Order",
    "condition": "null",
    "data": Object {
      "docId": "ObjectID",
    },
    "dbName": null,
    "fromMaster": true,
    "id": 1,
    "tags": Array [],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 2,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Bar\\",\\"id\\":1,\\"name\\":\\"Cola\\",\\"price\\":98,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,null],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":98,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":15.65,\\"net\\":82.35,\\"gross\\":98}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 3,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":232,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134},\\"19\\":{\\"tax\\":15.65,\\"net\\":82.35,\\"gross\\":98}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 4,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 5,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 6,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"items\\":{\\"groupPrinter\\":\\"Bar\\",\\"id\\":\\"4\\",\\"name\\":\\"Soda\\",\\"price\\":20,\\"product\\":\\"ObjectID\\",\\"taxes\\":[19,7],\\"course\\":1,\\"quantity\\":2,\\"_id\\":\\"ObjectID\\",\\"vSum\\":40,\\"vTakeAway\\":false,\\"tax\\":19,\\"vTaxSum\\":{\\"19\\":{\\"tax\\":6.39,\\"net\\":33.61,\\"gross\\":40}}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 7,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":272,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134},\\"19\\":{\\"tax\\":22.04,\\"net\\":115.96,\\"gross\\":138}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 8,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\",\\"items.$.quantity\\":1,\\"items.$.vSum\\":67,\\"items.$.vTaxSum\\":{\\"7\\":{\\"tax\\":4.38,\\"net\\":62.62,\\"gross\\":67}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 9,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 10,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$.product\\":\\"ObjectID\\"}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\",\\"items._id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 11,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$push\\":{\\"cancellationItems\\":{\\"groupPrinter\\":\\"Bar\\",\\"id\\":\\"3\\",\\"name\\":\\"Water\\",\\"price\\":67,\\"product\\":\\"ObjectID\\",\\"taxes\\":[7,null],\\"course\\":1,\\"quantity\\":1,\\"_id\\":\\"ObjectID\\",\\"vSum\\":134,\\"vTakeAway\\":false,\\"tax\\":7,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":8.77,\\"net\\":125.23,\\"gross\\":134}},\\"sent\\":true,\\"printed\\":true,\\"originalQuantity\\":2}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 12,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"vSum\\":205,\\"vTaxSum\\":{\\"7\\":{\\"tax\\":4.38,\\"net\\":62.62,\\"gross\\":67},\\"19\\":{\\"tax\\":22.04,\\"net\\":115.96,\\"gross\\":138}}}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
      "orderId": "ObjectID",
      "table": null,
    },
    "dbName": null,
    "fromMaster": true,
    "id": 13,
    "tags": Array [
      "updateActiveOrder",
    ],
    "uuid": "uuid-v1",
  },
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"findOneAndUpdate\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\"},{\\"$set\\":{\\"items.$[].sent\\":true,\\"items.$[].printed\\":true,\\"cancellationItems.$[].sent\\":true,\\"cancellationItems.$[].printed\\":true}}]},{\\"fn\\":\\"setOptions\\",\\"args\\":[{\\"new\\":true}]}]",
    "collectionName": "Order",
    "condition": "{\\"_id\\":\\"ObjectID\\"}",
    "data": Object {
      "docId": "ObjectID",
    },
    "dbName": null,
    "fromMaster": true,
    "id": 14,
    "tags": Array [],
    "uuid": "uuid-v1",
  },
]
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 7`] = `
Object {
  "_id": "ObjectID",
  "cancellationItems": Array [
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "3",
      "name": "Water",
      "originalQuantity": 2,
      "price": 67,
      "printed": true,
      "product": "ObjectID",
      "quantity": 1,
      "sent": true,
      "tax": 7,
      "taxes": Array [
        7,
        null,
      ],
      "vSum": 134,
      "vTakeAway": false,
      "vTaxSum": Object {
        "7": Object {
          "gross": 134,
          "net": 125.23,
          "tax": 8.77,
        },
      },
    },
  ],
  "cashback": 0,
  "items": Array [
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "3",
      "name": "Water",
      "originalQuantity": 2,
      "price": 67,
      "printed": true,
      "product": "ObjectID",
      "quantity": 1,
      "sent": true,
      "tax": 7,
      "taxes": Array [
        7,
        null,
      ],
      "vSum": 67,
      "vTakeAway": false,
      "vTaxSum": Object {
        "7": Object {
          "gross": 67,
          "net": 62.62,
          "tax": 4.38,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": 1,
      "name": "Cola",
      "price": 98,
      "product": "ObjectID",
      "quantity": 1,
      "tax": 19,
      "taxes": Array [
        19,
        null,
      ],
      "vSum": 98,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 98,
          "net": 82.35,
          "tax": 15.65,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "4",
      "name": "Soda",
      "price": 20,
      "product": "ObjectID",
      "quantity": 2,
      "tax": 19,
      "taxes": Array [
        19,
        7,
      ],
      "vSum": 40,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 40,
          "net": 33.61,
          "tax": 6.39,
        },
      },
    },
  ],
  "payment": Array [],
  "status": "inProgress",
  "takeAway": false,
  "tip": 0,
  "user": Array [],
  "vDate": "2020-12-31T17:00:00.000Z",
  "vSum": 205,
  "vTaxSum": Object {
    "19": Object {
      "gross": 138,
      "net": 115.96,
      "tax": 22.04,
    },
    "7": Object {
      "gross": 67,
      "net": 62.62,
      "tax": 4.38,
    },
  },
}
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 8`] = `
Object {
  "_id": "ObjectID",
  "cancellationItems": Array [
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "3",
      "name": "Water",
      "originalQuantity": 2,
      "price": 67,
      "printed": true,
      "product": "ObjectID",
      "quantity": 1,
      "sent": true,
      "tax": 7,
      "taxes": Array [
        7,
        null,
      ],
      "vSum": 134,
      "vTakeAway": false,
      "vTaxSum": Object {
        "7": Object {
          "gross": 134,
          "net": 125.23,
          "tax": 8.77,
        },
      },
    },
  ],
  "cashback": 0,
  "discounts": Array [],
  "items": Array [
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "3",
      "name": "Water",
      "originalQuantity": 1,
      "price": 67,
      "printed": true,
      "product": "ObjectID",
      "quantity": 3,
      "sent": true,
      "tax": 7,
      "taxes": Array [
        7,
        null,
      ],
      "vSum": 201,
      "vTakeAway": false,
      "vTaxSum": Object {
        "7": Object {
          "gross": 201,
          "net": 187.85,
          "tax": 13.15,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": 1,
      "name": "Cola",
      "originalQuantity": 1,
      "price": 98,
      "product": "ObjectID",
      "quantity": 1,
      "tax": 19,
      "taxes": Array [
        19,
        null,
      ],
      "vSum": 98,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 98,
          "net": 82.35,
          "tax": 15.65,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": "4",
      "name": "Soda",
      "originalQuantity": 2,
      "price": 20,
      "product": "ObjectID",
      "quantity": 2,
      "tax": 19,
      "taxes": Array [
        19,
        7,
      ],
      "vSum": 40,
      "vTakeAway": false,
      "vTaxSum": Object {
        "19": Object {
          "gross": 40,
          "net": 33.61,
          "tax": 6.39,
        },
      },
    },
    Object {
      "_id": "ObjectID",
      "course": 1,
      "groupPrinter": "Bar",
      "id": 2,
      "name": "Pepsi",
      "price": 35,
      "product": "ObjectID",
      "quantity": 1,
      "tax": 0,
      "taxes": Array [
        0,
        null,
      ],
      "vSum": 35,
      "vTakeAway": false,
      "vTaxSum": Object {
        "0": Object {
          "gross": 35,
          "net": 35,
          "tax": 0,
        },
      },
    },
  ],
  "payment": Array [],
  "printer": Array [],
  "status": "inProgress",
  "takeAway": false,
  "tip": 0,
  "user": Array [],
  "vDate": "2020-12-31T17:00:00.000Z",
  "vSum": 374,
  "vTaxGroups": Array [],
  "vTaxSum": Object {
    "0": Object {
      "gross": 35,
      "net": 35,
      "tax": 0,
    },
    "19": Object {
      "gross": 138,
      "net": 115.96,
      "tax": 22.04,
    },
    "7": Object {
      "gross": 201,
      "net": 187.85,
      "tax": 13.15,
    },
  },
}
`;

exports[`Pos logic sync Case 1: Create order + addProduct in master 9`] = `
Array [
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
            "items._id": "ObjectID",
          },
          Object {
            "$set": Object {
              "items.$.product": "ObjectID",
              "items.$.vSum": 268,
              "items.$.vTaxSum": Object {
                "7": Object {
                  "gross": 268,
                  "net": 250.47,
                  "tax": 17.53,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": 2,
                "name": "Pepsi",
                "price": 35,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 0,
                "taxes": Array [
                  0,
                  null,
                ],
                "vSum": 35,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "0": Object {
                    "gross": 35,
                    "net": 35,
                    "tax": 0,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "vSum": 303,
              "vTaxSum": Object {
                "0": Object {
                  "gross": 35,
                  "net": 35,
                  "tax": 0,
                },
                "7": Object {
                  "gross": 268,
                  "net": 250.47,
                  "tax": 17.53,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": "3",
                "name": "Water",
                "originalQuantity": 2,
                "price": 67,
                "printed": true,
                "product": "ObjectID",
                "quantity": 4,
                "sent": true,
                "tax": 7,
                "taxes": Array [
                  7,
                  null,
                ],
                "vSum": 268,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "7": Object {
                    "gross": 268,
                    "net": 250.47,
                    "tax": 17.53,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$push": Object {
              "items": Object {
                "_id": "ObjectID",
                "course": 1,
                "groupPrinter": "Bar",
                "id": 2,
                "name": "Pepsi",
                "price": 35,
                "product": "ObjectID",
                "quantity": 1,
                "tax": 0,
                "taxes": Array [
                  0,
                  null,
                ],
                "vSum": 35,
                "vTakeAway": false,
                "vTaxSum": Object {
                  "0": Object {
                    "gross": 35,
                    "net": 35,
                    "tax": 0,
                  },
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
  Object {
    "action": Array [
      Object {
        "args": Array [
          Object {
            "_id": "ObjectID",
          },
          Object {
            "$set": Object {
              "_id": "ObjectID",
              "cashback": 0,
              "payment": Array [],
              "status": "inProgress",
              "takeAway": false,
              "tip": 0,
              "user": Array [],
              "vDate": "2020-12-31T17:00:00.000Z",
              "vSum": 303,
              "vTaxSum": Object {
                "0": Object {
                  "gross": 35,
                  "net": 35,
                  "tax": 0,
                },
                "7": Object {
                  "gross": 268,
                  "net": 250.47,
                  "tax": 17.53,
                },
              },
            },
          },
        ],
        "fn": "findOneAndUpdate",
      },
      Object {
        "args": Array [
          "updateActiveOrder",
          Object {
            "orderId": "ObjectID",
          },
        ],
        "fn": "commit",
      },
    ],
    "modelName": "Order",
  },
]
`;
